version before ui changes